git-svn-id: http://svn.systemsbiology.net/repos/compbio/Vesteinn_scripts/chipseq/trunk@9705 5021c4a6-a05a-4b22-8634-7b27b77db61f

--- a/annotation/README
+++ b/annotation/README
@@ -1,10 +1,25 @@
 
+
+
 March 15, 2010
 --------------
 wget ftp://ftp.ncbi.nlm.nih.gov/gene/DATA/gene2ensembl.gz 
 gunzip gene2ensembl.gz
 grep ^10090 gene2ensembl > gene2ensembl_mouse
 
+This seems to be missing many ENSMUSTs so lets use BioMart
+
+ Dataset 34213 / 34213 Genes
+Mus musculus genes (NCBIM37)
+Mus musculus genes (NCBIM37)
+Filters
+[None selected]
+Attributes
+Ensembl Gene ID
+Ensembl Transcript ID
+EntrezGene ID
+
+mart_export.txt
 
 March 15, 2010
 -------------- 
